--- a/src/assets/front/css/main.css
+++ b/src/assets/front/css/main.css
@@ -3976,6 +3976,7 @@ div#application {
     height: 349px;
     width: 289px;
     box-shadow: 0 0 10px #12131420;
+    z-index: 8
 }
 
 #frontSection #footer #footerSection #buttons {
