--- a/src/assets/front/css/main.css
+++ b/src/assets/front/css/main.css
@@ -2059,7 +2059,11 @@ button#toggleMenuModal i {
 #blogDetailSection #introductionSection {
   margin-top: 9%;
 }
-
+@media (max-width:1550px) And (min-width:1300px){
+  #blogDetailSection.cookingDetail #introductionSection{
+    margin-top: 5%;
+  }
+}
 .ckEditorOutput {
   text-align: right;
   direction: rtl;
@@ -6359,9 +6363,17 @@ section#galleries h3 {
 .blogDetailSection #introductionSection #content .imageBoxMobile img {
   width: 100%;
 }
-@media (min-width: 1600px) {
+
+@media (min-width: 1750px) {
   .cookingDetail #introductionSection #content img {
     transform: scale(1.3) !important;
+    position: relative;
+    top: 50px;
+  }
+}
+@media (min-width: 1600px) {
+  .cookingDetail #introductionSection #content img {
+    transform: scale(1) !important;
     position: relative;
     top: 50px;
   }
