--- a/src/assets/front/css/main.css
+++ b/src/assets/front/css/main.css
@@ -6097,7 +6097,6 @@ img#moonSvg {
 /* footer nav */
 
 #homeFooterNavigation {
-  background-image: url("../images/footerNav.png");
   position: fixed;
   left: 0;
   bottom: 0;
@@ -6106,6 +6105,11 @@ img#moonSvg {
   background-repeat: no-repeat;
   background-size: 100% 100%;
   z-index: 100000;
+  background-color: white;
+  box-shadow: 1px -1px 5px #00000040;
+  justify-content: space-between;
+  align-items: center;
+  padding: 5px;
 }
 
 .circleNavFooter {
@@ -6119,11 +6123,9 @@ img#moonSvg {
 }
 
 a#mobileMenuBar {
-  position: absolute;
-  left: 10%;
-  top: 7%;
+ 
   color: var(--color-theme);
-  font-size: 24px;
+  font-size: 31px;
 }
 
 div#cuurentSection {
@@ -6134,21 +6136,17 @@ div#cuurentSection {
 }
 
 a.healthRoute.circleNavFooter {
-  position: absolute;
-  right: 10%;
-  top: 7%;
+ 
   background-color: #01b74a;
 }
 
-a.healthRoute.circleNavFooter.health {
-  background: transparent;
-}
+
 
 a#cuurentSection {
-  position: absolute;
+  /* position: absolute;
   left: 50%;
   transform: translate(-50%);
-  top: -40%;
+  top: -40%; */
 }
 
 #cuurentSection.health {
@@ -6156,17 +6154,17 @@ a#cuurentSection {
 }
 
 a#cuurentSection {
-  position: absolute;
+  /* position: absolute;
   left: 50%;
   transform: translate(-50%);
   top: -40%;
   width: 55px;
-  height: 55px;
-  animation: shaker 1.3s infinite linear alternate;
+  height: 55px; */
+  /* animation: shaker 1.3s infinite linear alternate; */
 }
 
 #logoSvgfooter {
-  width: 60px;
+  width: 40px;
 }
 
 .healthRoute.health #logoSvgfooter {
