--- a/src/assets/admin/css/main.css
+++ b/src/assets/admin/css/main.css
@@ -35,7 +35,7 @@ nav#mainNavbarAdmin {
 
 .mainContentAdmin {
     width: 94%;
-    padding: 2%;
+    padding:4% 2% 2%;
     height: 100vh;
     overflow: auto;
 }
